--- a/coffee.html
+++ b/coffee.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <a href="/index.html"><img id="logo" src="IMAGES/LOGO.svg"></a>
+        <a href="https://copythatcat.github.io/final/"><img id="logo" src="IMAGES/LOGO.svg"></a>
         <!-- <img id="mail" src="IMAGES/mail.svg"> -->
     </header>
     <nav>
