--- a/events.html
+++ b/events.html
@@ -45,7 +45,7 @@
             </ul>
         </div>
         <div>
-            <img src="../IMAGES/guitar.jpg" alt="Man playing guitar on stage">
+            <img src="/final/IMAGES/guitar.jpg" alt="Man playing guitar on stage">
         </div>
     </div>
 
