--- a/coffee.html
+++ b/coffee.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link href="/lightbox/lightbox-css/lightbox.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/lightbox/lightbox-css/lightbox.min.css">
     <style>
         body {
             font-family: "Lora", serif;
