--- a/coffee.html
+++ b/coffee.html
@@ -56,9 +56,9 @@
             <br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/qSdGXdIfpoY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        </div>
             <div class="coffee-images">
-                <a href="/LIGHTBOX_IMAGES/large-beanbag.jpg" data-lightbox="roadtrip"><img src="/IMAGES/Sack_thumb.png" style="width: 230px; padding: 10px; border-radius: 10px;" alt=""></a>
-                <a href="/IMAGES/beans.png" data-lightbox="roadtrip"><img src="/IMAGES/beans.png" style="width: 230px; padding: 10px" alt=""></a>
-                <a href="/IMAGES/CoffeeBag.png" data-lightbox="roadtrip"><img src="/IMAGES/CoffeeBag.png" style="width: 230px; padding: 10px" alt=""></a>
+                <a href="/final/LIGHTBOX_IMAGES/large-beanbag.jpg" data-lightbox="roadtrip"><img src="/final/IMAGES/Sack_thumb.png" style="width: 230px; padding: 10px; border-radius: 10px;" alt=""></a>
+                <a href="/final/IMAGES/beans.png" data-lightbox="roadtrip"><img src="/final/IMAGES/beans.png" style="width: 230px; padding: 10px" alt=""></a>
+                <a href="/final/IMAGES/CoffeeBag.png" data-lightbox="roadtrip"><img src="/final/IMAGES/CoffeeBag.png" style="width: 230px; padding: 10px" alt=""></a>
             </div>
     </div>
 
