--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <title>Java Town Cafe</title>
     <link rel="icon" type="image/x-icon" href="/IMAGES/BEAN.svg">
     <meta charset="UTF-8">
-    <meta name="Java Town Cafe" content="Java Town Cafe">
+    <meta name="About" content="About Java Town">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css">
     <script src="https://kit.fontawesome.com/f721fcd643.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <a href="https://copythatcat.github.io/final/"><img id="logo" src="IMAGES/LOGO.svg"></a>
+        <a href="https://copythatcat.github.io/final/"><img id="logo" src="IMAGES/LOGO.svg" alt="Java Town Logo"></a>
         <!-- <img id="mail" src="IMAGES/mail.svg"> -->
     </header>
     <nav>
@@ -63,9 +63,9 @@
         <div class="about-slide">
             <div class="cycle-slideshow" data-cycle-loader="wait" data-cycle-fx="fadeout" data-cycle-timeout=6000
                 data-cycle-pause-on-hover="false" data-cycle-speed="2000">
-                <img src="IMAGES/portrait1.jpg">
-                <img src="IMAGES/portrait2.jpg">
-                <img src="IMAGES/portrait3.jpg">
+                <img src="IMAGES/portrait1.jpg" alt="dimly lit cafe">
+                <img src="IMAGES/portrait2.jpg" alt="freshly poured coffee in mugs">
+                <img src="IMAGES/portrait3.jpg" alt="a table next to a window with a notebook on the table">
             </div>
         </div>
     </div>
@@ -81,10 +81,10 @@
 
     <footer>
         <div class="socials">
-            <a href="https://wwww.instagram.com"><img id="insta" src="IMAGES/INSTAGRAM.png"></a>
-            <a href="https://www.facebook.com"><img id="facebook" src="IMAGES/FACEBOOK.png"></a>
-            <a href="https://www.twitter.com"><img id="twitter" src="IMAGES/TWITTER.png"></a>
-            <a href="https://www.yelp.com"><img id="yelp" src="IMAGES/YELP.png"></a>
+            <a href="https://wwww.instagram.com"><img id="insta" src="IMAGES/INSTAGRAM.png" alt="instagram logo"></a>
+            <a href="https://www.facebook.com"><img id="facebook" src="IMAGES/FACEBOOK.png" alt="facebook logo"></a>
+            <a href="https://www.twitter.com"><img id="twitter" src="IMAGES/TWITTER.png" alt="twitter logo"></a>
+            <a href="https://www.yelp.com"><img id="yelp" src="IMAGES/YELP.png" alt="yelp logo"></a>
         </div>
     </footer>
 
