alt tags and head

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>Java Town Cafe</title>
-    <link rel="icon" type="image/x-icon" href="/IMAGES/BEAN.svg">
+    <link rel="icon" type="image/x-icon" href="/final/IMAGES/BEAN.svg">
     <meta charset="UTF-8">
-    <meta name="Java Town Cafe" content="Java Town Cafe">
+    <meta name="Contact" content="Contact Us">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css">
     <script src="https://kit.fontawesome.com/f721fcd643.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <a href="https://copythatcat.github.io/final/"><img id="logo" src="IMAGES/LOGO.svg"></a>
+        <a href="https://copythatcat.github.io/final/"><img id="logo" src="IMAGES/LOGO.svg" alt="java town logo"></a>
         <!-- <img id="mail" src="IMAGES/mail.svg"> -->
     </header>
     <nav>
@@ -68,10 +68,10 @@
 
     <footer>
         <div class="socials">
-            <a href="https://wwww.instagram.com"><img id="insta" src="IMAGES/INSTAGRAM.png"></a>
-            <a href="https://www.facebook.com"><img id="facebook" src="IMAGES/FACEBOOK.png"></a>
-            <a href="https://www.twitter.com"><img id="twitter" src="IMAGES/TWITTER.png"></a>
-            <a href="https://www.yelp.com"><img id="yelp" src="IMAGES/YELP.png"></a>
+            <a href="https://wwww.instagram.com"><img id="insta" src="IMAGES/INSTAGRAM.png" alt="instagram logo"></a>
+            <a href="https://www.facebook.com"><img id="facebook" src="IMAGES/FACEBOOK.png" alt="facebook logo"></a>
+            <a href="https://www.twitter.com"><img id="twitter" src="IMAGES/TWITTER.png" alt="twitter logo"></a>
+            <a href="https://www.yelp.com"><img id="yelp" src="IMAGES/YELP.png" alt="yelp logo"></a>
         </div>
     </footer>
 
