--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Java Town Cafe</title>
-    <link rel="icon" type="image/x-icon" href="/IMAGES/BEAN.svg">
+    <link rel="icon" type="image/x-icon" href="/final/IMAGES/BEAN.svg">
     <meta charset="UTF-8">
     <meta name="About" content="About Java Town">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
