--- a/coffee.html
+++ b/coffee.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>Java Town Cafe</title>
-    <link rel="icon" type="image/x-icon" href="/IMAGES/BEAN.svg">
+    <link rel="icon" type="image/x-icon" href="/final/IMAGES/BEAN.svg">
     <meta charset="UTF-8">
-    <meta name="Java Town Cafe" content="Java Town Cafe">
+    <meta name="Coffee" content="Java Town Coffee">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <a href="https://copythatcat.github.io/final/"><img id="logo" src="IMAGES/LOGO.svg"></a>
+        <a href="https://copythatcat.github.io/final/"><img id="logo" src="IMAGES/LOGO.svg" alt="java town logo"></a>
         <!-- <img id="mail" src="IMAGES/mail.svg"> -->
     </header>
     <nav>
@@ -56,9 +56,9 @@
             <br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/qSdGXdIfpoY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        </div>
             <div class="coffee-images">
-                <a href="/final/LIGHTBOX_IMAGES/large-beanbag.jpg" data-lightbox="roadtrip"><img src="/final/IMAGES/Sack_thumb.png" style="width: 230px; padding: 10px; border-radius: 10px;" alt=""></a>
-                <a href="/final/IMAGES/beans.png" data-lightbox="roadtrip"><img src="/final/IMAGES/beans.png" style="width: 230px; padding: 10px" alt=""></a>
-                <a href="/final/IMAGES/CoffeeBag.png" data-lightbox="roadtrip"><img src="/final/IMAGES/CoffeeBag.png" style="width: 230px; padding: 10px" alt=""></a>
+                <a href="/final/LIGHTBOX_IMAGES/large-beanbag.jpg" data-lightbox="roadtrip"><img src="/final/IMAGES/Sack_thumb.png" style="width: 230px; padding: 10px; border-radius: 10px;" alt="sack of coffee beans"></a>
+                <a href="/final/IMAGES/beans.png" data-lightbox="roadtrip"><img src="/final/IMAGES/beans.png" style="width: 230px; padding: 10px" alt="coffee beans"></a>
+                <a href="/final/IMAGES/CoffeeBag.png" data-lightbox="roadtrip"><img src="/final/IMAGES/CoffeeBag.png" style="width: 230px; padding: 10px" alt="a package of roasted coffee beans"></a>
             </div>
     </div>
 
@@ -87,10 +87,10 @@
 
     <footer>
         <div class="socials">
-            <a href="https://wwww.instagram.com"><img id="insta" src="IMAGES/INSTAGRAM.png"></a>
-            <a href="https://www.facebook.com"><img id="facebook" src="IMAGES/FACEBOOK.png"></a>
-            <a href="https://www.twitter.com"><img id="twitter" src="IMAGES/TWITTER.png"></a>
-            <a href="https://www.yelp.com"><img id="yelp" src="IMAGES/YELP.png"></a>
+            <a href="https://wwww.instagram.com"><img id="insta" src="IMAGES/INSTAGRAM.png" alt="instagram logo"></a>
+            <a href="https://www.facebook.com"><img id="facebook" src="IMAGES/FACEBOOK.png" alt="facebook logo"></a>
+            <a href="https://www.twitter.com"><img id="twitter" src="IMAGES/TWITTER.png" alt="twitter logo"></a>
+            <a href="https://www.yelp.com"><img id="yelp" src="IMAGES/YELP.png" alt="yelp logo"></a>
         </div>
     </footer>
 
