--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Java Town Cafe</title>
-    <link rel="icon" type="image/x-icon" href="/IMAGES/BEAN.svg">
+    <link rel="icon" type="image/x-icon" href="/final/IMAGES/BEAN.svg">
     <meta charset="UTF-8">
     <meta name="Java Town Cafe" content="Java Town Cafe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <a href="https://copythatcat.github.io/final/"><img id="logo" src="IMAGES/LOGO.svg"></a>
+        <a href="https://copythatcat.github.io/final/"><img id="logo" src="IMAGES/LOGO.svg" alt="java town logo"></a>
         <!-- <img id="mail" src="IMAGES/mail.svg"> -->
     </header>
     <nav>
@@ -38,9 +38,9 @@
     <div class="intro">
         <div class="cycle-slideshow" data-cycle-loader="wait" data-cycle-fx="fadeout" data-cycle-timeout=6000
             data-cycle-pause-on-hover="false" data-cycle-speed="2000">
-            <img src="IMAGES/cafe.jpg">
-            <img src="IMAGES/barista.jpg">
-            <img src="IMAGES/inside.jpg">
+            <img src="IMAGES/cafe.jpg" alt="interior of cafe">
+            <img src="IMAGES/barista.jpg" alt="barista working the cafe bar">
+            <img src="IMAGES/inside.jpg" alt="interior of cafe with people sitting down">
         </div>
     </div>
 
@@ -78,7 +78,7 @@
 
     <div class="coffee">
         <article class="card-1">
-            <img src="IMAGES/beans.png">
+            <img src="IMAGES/beans.png" alt="coffee beans">
         </article>
 
         <article class="card-1">
@@ -100,10 +100,10 @@
 
     <footer>
         <div class="socials">
-            <a href="https://wwww.instagram.com"><img id="insta" src="IMAGES/INSTAGRAM.png"></a>
-            <a href="https://www.facebook.com"><img id="facebook" src="IMAGES/FACEBOOK.png"></a>
-            <a href="https://www.twitter.com"><img id="twitter" src="IMAGES/TWITTER.png"></a>
-            <a href="https://www.yelp.com"><img id="yelp" src="IMAGES/YELP.png"></a>
+            <a href="https://wwww.instagram.com"><img id="insta" src="IMAGES/INSTAGRAM.png" alt="instagram logo"></a>
+            <a href="https://www.facebook.com"><img id="facebook" src="IMAGES/FACEBOOK.png" alt="facebook logo"></a>
+            <a href="https://www.twitter.com"><img id="twitter" src="IMAGES/TWITTER.png" alt="twitter logo"></a>
+            <a href="https://www.yelp.com"><img id="yelp" src="IMAGES/YELP.png" alt="yelp logo"></a>
         </div>
     </footer>
 
