--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
             <i class="fa-solid fa-laptop"></i> bring your laptop and hunker down for a while (we have free wifi and power outlets!)
             <br>
             <br>
-            <a href="/events.html"><i class="fa-solid fa-calendar-days"></i> be sure to check our events calendar, we host concerts every month </a>
+            <a href="/final/events.html"><i class="fa-solid fa-calendar-days"></i> be sure to check our events calendar, we host concerts every month </a>
             <br>
             <br>
             <a href="https://twitter.com/"><span style="font-size: 1em; color: rgb(248, 207, 131);"><i
